fix: change colors, trending item display on mobile

--- a/src/client/src/index.css
+++ b/src/client/src/index.css
@@ -3,6 +3,6 @@
 @tailwind utilities;
 
 body {
-  background-color: theme('colors.primary.800');
-  color: theme('colors.secondary.100');
+  background-color: theme('colors.primary.100');
+  color: theme('colors.primary.800');
 }
